# service-collector

./: README.md  main.cpp  serviceCollector.cpp  serviceCollectorTest.cpp
config/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  collected_data.txt  system_info_collector
